# aes_secure_chat

./: .gitignore  CMakeLists.txt  implementation.md  main_server.cpp
fix/: codec.cpp  codec.h  session.cpp  session.h
security/: aes.cpp  aes.h  security.cpp  security.h  tls.cpp  tls.h
simulator/: client.py  exchange.cpp  exchange.h  pyproject.toml
transport/: tcp.cpp  tcp.h
